--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "better-sqlite3": "^11.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.439.0",
     "next": "14.2.13",
