--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,8 +12,8 @@ concurrency:
 
 env:
   PROVIDER: ghcr.io
-  BASE_IMAGE_NAME: ${{ github.repository_owner }}/${{ github.repository }}
-  IMAGE_NAME: ${{ env.PROVIDER }}/${{ env.BASE_IMAGE_NAME }}
+  REPO_NAME: ${{ github.repository }}
+  IMAGE_NAME: ghcr.io/${{ github.repository }}
 
 jobs:
   build-and-push:
@@ -43,4 +43,5 @@ jobs:
             --tag "${{ env.IMAGE_NAME }}:${{ github.ref_name }}" \
             --push \
             --progress=plain \
+            --file Dockerfile \
             .
