--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,12 +17,15 @@ env:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
-
+    name: Build and Push Docker Image
+    runs-on: ubuntu-24.04
+    if: (github.event_name == 'push' && contains(github.event.head_commit.message, '[CI]')) || (github.event_name == 'workflow_dispatch')
+    permissions:
+        contents: read
+        packages: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
 
@@ -32,7 +35,6 @@ jobs:
           registry: ${{ env.PROVIDER }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build Docker image
         run: |
           docker buildx build \
