chore: add biome, eslint, lefthook config (#29)
This PR solves issue #25 
- [x] Added Biome as formatter
- [x] Added Eslint Config for linting
- [x] Added git hooks via lefthook with config
- [x] Solved merge conflicts before pushing changes
- [x] Resolved all linting and formatting errors 

Also, I have used `// eslint-disable-next-line
react-hooks/exhaustive-deps` to disable warning related to hook
dependencies.

Signed-off-by: void-hr <gsharmaji93@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,19 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "next/typescript"
-  ]
+	"extends": ["next", "next/core-web-vitals", "plugin:unicorn/recommended"],
+	"plugins": ["filenames"],
+	"ignorePatterns": ["next-env.d.ts"],
+	"rules": {
+		"filenames/match-regex": ["error", "^[a-z0-9-]+$", true],
+		"unicorn/filename-case": [
+			"error",
+			{
+				"case": "kebabCase"
+			}
+		],
+		"unicorn/no-null": 0,
+		"unicorn/no-array-for-each": 0,
+		"unicorn/no-nested-ternary": 0,
+		"unicorn/prefer-spread": 0,
+		"unicorn/prevent-abbreviations": 0
+	}
 }
