--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["node_modules", "build"],
+    "ignore": ["node_modules", "build", ".next"],
     "ignoreUnknown": true
   },
   "linter": {
