ci: add CI workflow for continuous integration

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "check": "biome check",
     "check:fix": "biome check --write",
+    "check:ci": "biome ci .",
     "trigger:ci": "git commit --allow-empty -s -m '[CI]: release docker image'"
   },
   "engines": {
