chore: fix git-hooks and reenable typescript lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,15 @@
 {
-  "extends": ["next", "next/core-web-vitals", "plugin:unicorn/recommended"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "next/typescript",
+    "plugin:unicorn/recommended"
+  ],
   "plugins": ["filenames"],
   "ignorePatterns": ["next-env.d.ts"],
   "rules": {
     "filenames/match-regex": ["error", "^[a-z0-9-]+$", true],
-    "unicorn/filename-case": [
-      "error",
-      {
-        "case": "kebabCase"
-      }
-    ],
+    "unicorn/filename-case": ["error", { "case": "kebabCase" }],
     "unicorn/no-null": 0,
     "unicorn/no-array-for-each": 0,
     "unicorn/no-nested-ternary": 0,
