--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check": "biome check",
     "check:fix": "biome check --write",
     "check:ci": "biome ci .",
+    "check:hook": "biome check --no-errors-on-unmatched --files-ignore-unknown=true",
     "trigger:ci": "git commit --allow-empty -s -m '[CI]: release docker image'"
   },
   "engines": {
@@ -68,7 +69,7 @@
     "eslint-config-next": "14.2.9",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-unicorn": "^56.0.0",
-    "lefthook": "^1.7.18",
+    "lefthook": "1.7.18",
     "monaco-editor": "^0.52.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.13",
