ci: setup CI pipeline and fix some issues (#35)
This pull request includes several important changes to configuration
files, workflows, and code refactoring for better consistency and
performance. The most significant changes involve updates to
`.editorconfig`, `.eslintrc.json`, and various code refactorings to
improve the maintainability and readability of the codebase.

### Configuration Updates:

* **`.editorconfig`**: Added rules for indentation, charset, and
trimming of trailing whitespace to ensure consistent coding styles
across different editors.
* **`.eslintrc.json`**: Extended ESLint configuration to include
TypeScript rules and added **temporary exceptions** for
TypeScript-specific linting rules that will need to be addressed in
future updates.
* **`.npmrc`**: Ensured exact versions are installed and disabled
caching of side effects to avoid issues with post-install scripts.
* **`.nvmrc`**: Specified Node.js version 22.

### Workflow Enhancements:

* **CI Workflow**: Added a new Continuous Integration workflow to
automate setup, formatting checks, and linting.
* **Docker Workflow**: Enhanced the workflow to handle manual releases
and added a condition to build and push Docker images only for specific
repository and commit messages.

### Code Refactoring:

* **Fixed Lint Issues**: Replaced `let` with `const` for variables that
are not reassigned to improve code readability and maintainability.
Changes were applied in multiple files across the codebase.

### Additional Changes:

* **VSCode Settings**: Updated VSCode settings to organize imports and
fix all issues on save using Biome.
* **Biome Configuration**: Updated `biome.json` to ignore additional
directories and use `.editorconfig` settings.
* **Lefthook Configuration**: Modified `lefthook.yml` to run specific
checks and audits during pre-commit and pre-push hooks.
* **Package Management**: Updated `package.json` and `pnpm-lock.yaml` to
ensure specific versions of dependencies and tools are used.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,14 +6,24 @@ assert_lefthook_installed: true
 pre-commit:
   parallel: false
   commands:
-    biome:
-      run: pnpm run check
+    format:
+      tags: formatting
+      run: pnpm run check:hook -- {staged_files}
     lint:
-      run: pnpm run lint
-      include: "*.js,*.jsx,*.ts,*.tsx" 
+      tags: linting
+      glob: "*.{js,jsx,ts,tsx}"
+      run: pnpm exec next lint --file {staged_files}
 
 pre-push:
   parallel: false
   commands:
+    format:
+      tags: formatting
+      run: pnpm run check:hook -- {push_files}
     lint:
-      run: pnpm run lint 
+      tags: linting
+      glob: "*.{js,jsx,ts,tsx}"
+      run: pnpm exec next lint --file {push_files}
+    audit:
+      tags: security
+      run: pnpm audit --prod
