--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,25 @@
 {
-  "extends": ["next", "next/core-web-vitals", "plugin:unicorn/recommended"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "next/typescript",
+    "plugin:unicorn/recommended"
+  ],
   "plugins": ["filenames"],
   "ignorePatterns": ["next-env.d.ts"],
   "rules": {
     "filenames/match-regex": ["error", "^[a-z0-9-]+$", true],
-    "unicorn/filename-case": [
-      "error",
-      {
-        "case": "kebabCase"
-      }
-    ],
+    "unicorn/filename-case": ["error", { "case": "kebabCase" }],
     "unicorn/no-null": 0,
     "unicorn/no-array-for-each": 0,
     "unicorn/no-nested-ternary": 0,
     "unicorn/prefer-spread": 0,
-    "unicorn/prevent-abbreviations": 0
+    "unicorn/prevent-abbreviations": 0,
+    // TODO: Check these rules later
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-unused-vars": [
+      0,
+      { "argsIgnorePattern": "^_", "args": "all" }
+    ]
   }
 }
