--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,7 +4,13 @@ on:
   push:
     branches:
       - main
+      - develop
   workflow_dispatch:
+    inputs:
+      reason:
+        description: "Write why you are requesting a manual release"
+        type: string
+        required: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -19,16 +25,18 @@ jobs:
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-24.04
-    if: (github.event_name == 'push' && contains(github.event.head_commit.message, '[CI]')) || (github.event_name == 'workflow_dispatch')
+    # See https://github.com/actions/runner/issues/859#issue-766582646
+    if: >
+      (github.repository == 'basementdevs/scylla-studio') &&
+      ((github.event_name == 'push' && contains(github.event.head_commit.message, '[CD]')) || (github.event_name == 'workflow_dispatch'))
     permissions:
-        contents: read
-        packages: write
+      contents: read
+      packages: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # 3.3.0
         with:
@@ -38,6 +46,7 @@ jobs:
       - name: Build Docker image
         run: |
           docker buildx build \
+            --platform "linux/amd64" \
             --label "org.opencontainers.image.source=https://github.com/${{ env.BASE_IMAGE_NAME }}" \
             --label "org.opencontainers.image.created=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
             --tag "${{ env.IMAGE_NAME }}:latest" \
