--- a/package.json
+++ b/package.json
@@ -18,62 +18,62 @@
     "pnpm": "9.11.0"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@lambda-group/scylladb": "^0.6.1",
-    "@monaco-editor/react": "^4.6.0",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/better-sqlite3": "^7.6.11",
-    "better-sqlite3": "^11.3.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "lodash.debounce": "^4.0.8",
-    "lucide-react": "^0.439.0",
-    "next": "14.2.13",
-    "next-safe-action": "^7.9.2",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-resizable-panels": "^2.1.3",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zod-form-data": "^2.0.2",
+    "@hookform/resolvers": "3.9.0",
+    "@lambda-group/scylladb": "~0.6.1",
+    "@monaco-editor/react": "4.6.0",
+    "@radix-ui/react-accordion": "1.2.1",
+    "@radix-ui/react-avatar": "1.1.1",
+    "@radix-ui/react-collapsible": "1.1.1",
+    "@radix-ui/react-context-menu": "2.2.2",
+    "@radix-ui/react-dialog": "1.1.2",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.2",
+    "@radix-ui/react-scroll-area": "1.2.0",
+    "@radix-ui/react-select": "2.1.2",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-tabs": "1.1.1",
+    "@radix-ui/react-tooltip": "1.1.3",
+    "better-sqlite3": "11.3.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "cmdk": "1.0.0",
+    "lodash.debounce": "4.0.8",
+    "lucide-react": "^0.452.0",
+    "next": "14.2.15",
+    "next-safe-action": "7.9.3",
+    "next-themes": "0.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.53.0",
+    "react-resizable-panels": "2.1.4",
+    "recharts": "2.13.0",
+    "sharp": "0.33.5",
+    "sonner": "1.5.0",
+    "tailwind-merge": "2.5.3",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.23.8",
+    "zod-form-data": "2.0.2",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.11",
     "@biomejs/biome": "1.9.3",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.9",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-unicorn": "^56.0.0",
+    "@types/better-sqlite3": "7.6.11",
+    "@types/lodash.debounce": "4.0.9",
+    "@types/node": "22.7.5",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.15",
+    "eslint-plugin-filenames": "1.3.2",
+    "eslint-plugin-unicorn": "56.0.0",
     "lefthook": "1.7.18",
-    "monaco-editor": "^0.52.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5"
+    "monaco-editor": "0.52.0",
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.13",
+    "typescript": "5.4.5"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
   "contributors": [
