--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
     "lodash.debounce": "4.0.8",
-    "lucide-react": "^0.452.0",
+    "lucide-react": "0.452.0",
     "next": "14.2.15",
     "next-safe-action": "7.9.3",
     "next-themes": "0.3.0",
