--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           docker buildx build \
             --platform "linux/amd64" \
-            --label "org.opencontainers.image.source=https://github.com/${{ env.BASE_IMAGE_NAME }}" \
+            --label "org.opencontainers.image.source=https://github.com/${{ env.REPO_NAME }}" \
             --label "org.opencontainers.image.created=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
             --tag "${{ env.IMAGE_NAME }}:latest" \
             --tag "${{ env.IMAGE_NAME }}:${{ github.sha }}" \
