--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "unicorn/no-array-for-each": 0,
     "unicorn/no-nested-ternary": 0,
     "unicorn/prefer-spread": 0,
+    "unicorn/no-array-reduce": 0,
     "unicorn/prevent-abbreviations": 0,
     // TODO: Check these rules later
     "@typescript-eslint/no-explicit-any": 0,
