chore: change core property on contributor from false to true

--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
       "github": "rosajsx",
       "linkedin": "lucrosa",
       "openToWork": false,
-      "core": false
+      "core": true
     }
   ]
 }
