Keyspaces and Sidebar command  Improvements  (#77)
This pull request includes changes in the `keyspace details page`,
`keyspace table page`, and `sidebar command instructions`.

### ADDED

- New `KeyspaceConnectionNotFound` component to keyspaces components
- Validation on `keyspace details` and `keyspace table detail` to show a
'not found or connected message' when the connection was not selected.
- Validation on `keyspace details` and `keyspace table detail` when
`keyspace ` data are loading.
- Validation on `keyspace details` to show a 'not found message' when we
try to access an unexisting keyspace on the current connection.
- Validation on `keyspace table detail` to show a 'not found message'
when we try to access an unexisting table on the current keyspace.
- New contributor to contributor list on `package.json`


### CHANGED

- Status of Data Visualization feature from `wip` to `done`

---------

Co-authored-by: Gabriel Vieira <48625433+gvieira18@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -129,6 +129,13 @@
       "github": "lucasqueiroz",
       "openToWork": false,
       "core": false
+    },
+    {
+      "name": "Lucas Rosa",
+      "github": "rosajsx",
+      "linkedin": "lucrosa",
+      "openToWork": false,
+      "core": true
     }
   ]
 }
