--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,18 +19,19 @@ services:
       retries: 15
       start_period: 30s
     networks:
-      scylla-network:
-        ipv4_address: 172.20.20.2
+      - scylla-network
 
   scylla-studio:
     container_name: scylla-studio
     image: scylla-studio:local
     build:
       context: .
-      dockerfile: .docker/Dockerfile.bookworm
+      dockerfile: .docker/Dockerfile.alpine
     tty: true
     environment:
       - NEXT_PUBLIC_DOCKER_COMPOSE=1
+      - NEXT_TELEMETRY_DISABLED=1
+      - COREPACK_ENABLE_DOWNLOAD_PROMPT=0
     volumes:
       - /home/node/app/node_modules
       - ./src:/home/node/app/src:rw
@@ -40,8 +41,7 @@ services:
       scylla-node:
         condition: service_healthy
     networks:
-      scylla-network:
-        ipv4_address: 172.20.20.3
+      - scylla-network
 
 networks:
   scylla-network:
@@ -49,7 +49,3 @@ networks:
     driver: bridge
     driver_opts:
       com.docker.network.bridge.name: scylla-network
-    ipam:
-      config:
-        - gateway: 172.20.20.1
-          subnet: 172.20.20.0/28
