chore: add environment variables to CI workflow for Next.js telemetry and Corepack
Signed-off-by: Gabriel do Carmo Vieira <48625433+gvieira18@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+env:
+  NEXT_TELEMETRY_DISABLED: 1
+  COREPACK_ENABLE_DOWNLOAD_PROMPT: 0
+
 jobs:
   setup:
     name: Setup NodeJs, PNPM and Cache
