--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "unicorn/prefer-spread": 0,
     "unicorn/no-array-reduce": 0,
     "unicorn/prevent-abbreviations": 0,
+    "unicorn/prefer-global-this": 0,
     // TODO: Check these rules later
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-unused-vars": [
